[WIP] (can detect range, and characters, quantifiers, and negation of range)

--- a/task-3/task3.html
+++ b/task-3/task3.html
@@ -107,7 +107,7 @@
 		// 		console.log( matchIndex ? i2 : false );
 		// 	}
 		// }
-		matchRegEx("[a-c]{3}ca[e-a]b+(da)*f");
+		matchRegExPattern("[a-c]{3}c*4a[^e-c0-2]+(da)*f", "");
 
 	}
 
